# NDI-Monitor

./: .gitignore  .gitmodules  README.md
ndi-monitor-qt6/: CMakeLists.txt  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
ndi-monitor-qt6quick/: CMakeLists.txt  main.cpp  main.qml
